Adding Sato config. Pony config will need to be re-done

--- a/sato0001.conf
+++ b/sato0001.conf
@@ -12,7 +12,7 @@ shinken-data {
     uncertainties {
       mass-uncertainty = 1
       point-measurement-uncertainties {
-        x = 0
+        x = 1
         y = 1
         right-fuller-height = 0.1
         right-fuller-backward-taper-height = 0.1
@@ -21,6 +21,8 @@ shinken-data {
         right-fuller-backward-taper-width = 1
         right-fuller-forward-taper-width = 1
         right-fuller-iori-distance = 1
+        right-fuller-backward-taper-iori-distance = 1
+        right-fuller-forward-taper-iori-distance = 1
         left-fuller-height = 0.1
         left-fuller-backward-taper-height = 0.1
         left-fuller-forward-taper-height = 0.1
@@ -28,14 +30,16 @@ shinken-data {
         left-fuller-backward-taper-width = 1
         left-fuller-forward-taper-width = 1
         left-fuller-iori-distance = 1
+        left-fuller-backward-taper-iori-distance = 1
+        left-fuller-forward-taper-iori-distance = 1
+        kissaki-iori-width = 0.1
         iori-width = 0.1
         kissaki-shinogiji-iori-distance = 1
         shinogiji-iori-distance = 1
-        nakago-shinogiji-iori-distance = 1
-        mihaba = 1.5
-        kissaki-mihaba = 1.5
-        nakago-width = 1
+        nakago-shinogiji-mune-distance = 1
+        kissaki-niku-surface-length = 1
         niku-surface-length = 1
+        kissaki-kasane = 0.1
         kasane = 0.1
         shinogiji-height = 0.1
         nakago-ha-side-height = 0.1
@@ -72,42 +76,48 @@ shinken-data {
 
       mass = 794.87
 
+      steel-density-minimum = .00775
+      steel-density-maximum = .0080
+
       raw-geometry = [
         { #A
           x = 13
           y = 71.5
+          outline-context = mune-kami
           right-fuller-height = 2.03
           right-fuller-iori-distance = 3.0
+          right-fuller-backward-taper-iori-distance = 3.0
           right-fuller-width = 9.5
           right-fuller-backward-taper-width = 9.5
           left-fuller-height = 2.56
           left-fuller-iori-distance = 3.0
+          left-fuller-backward-taper-iori-distance = 3.0
           left-fuller-width = 10.0
           left-fuller-backward-taper-width = 10.0
-          nakago-width = 28
-          mihaba = 33
           shinogiji-iori-distance = 14.6
-          nakago-shinogiji-iori-distance = 11.7
+          shinogiji-height = 6.9
           niku-surface-length = 21.2
           iori-width = 1.6
           kasane = 6.84
-          shinogiji-height = 6.9
+        },
+        { #A
+          x = 13
+          y = 74
+          outline-context = mune-nakago
+          nakago-shinogiji-mune-distance = 11.7
+          nakago-shinogiji-height = 6.9
           nakago-ha-side-height = 2.41
           nakago-mune-side-height = 6.96
-          mune-machi-width = 2
         },
-        { #A*
-          x = 491
-          y = 176
-          geometric-transformation-context {
-            reflected = true
-            translated = true
-            rotated = true
-          }
-        },
+        {
+          x = 60
+          y = 72
+          outline-context = rotation-target
+        }
         { #B
           x = 60
           y = 72
+          outline-context = mune-kami
           right-fuller-height = 2.02
           right-fuller-iori-distance = 2.3
           right-fuller-width = 9.5
@@ -117,21 +127,21 @@ shinken-data {
           niku-surface-length = 21.5
           kasane = 6.76
           shinogiji-height = 7.76
-          coordinate-reconstruction-context = rotation-target
         },
         { #B*
           x = 445
           y = 177
+          outline-context = rotation-adjust
           geometric-transformation-context {
             reflected = true
             translated = true
             rotated = true
           }
-          coordinate-reconstruction-context = rotation-adjust
         },
         { #C
           x = 140
           y = 72.2
+          outline-context = mune-kami
           right-fuller-height = 2.20
           right-fuller-iori-distance = 2.0
           right-fuller-width = 10
@@ -145,6 +155,7 @@ shinken-data {
         { #D
           x = 220
           y = 70.9
+          outline-context = mune-kami
           right-fuller-height = 2.16
           right-fuller-iori-distance = 1.9
           right-fuller-width = 9.5
@@ -160,6 +171,7 @@ shinken-data {
         { #E
           x = 300
           y = 67.5
+          outline-context = mune-kami
           right-fuller-height = 2.19
           right-fuller-iori-distance = 1.7
           right-fuller-width = 9.7
@@ -173,6 +185,7 @@ shinken-data {
         { #F
           x = 380
           y = 62
+          outline-context = mune-kami
           right-fuller-height = 1.98
           right-fuller-iori-distance = 1.9
           right-fuller-width = 9.3
@@ -186,6 +199,7 @@ shinken-data {
         { #G
           x = 460
           y = 55.5
+          outline-context = mune-kami
           right-fuller-height = 1.97
           right-fuller-iori-distance = 1.7
           right-fuller-width = 9.0
@@ -199,6 +213,7 @@ shinken-data {
         { #H
           x = 540
           y = 47.5
+          outline-context = mune-kami
           right-fuller-height = 1.55
           right-fuller-iori-distance = 1.4
           right-fuller-width = 9.0
@@ -214,6 +229,7 @@ shinken-data {
         { #I
           x = 620
           y = 39
+          outline-context = mune-kami
           right-fuller-height = 1.43
           right-fuller-iori-distance = 1.3
           right-fuller-width = 8.5
@@ -229,6 +245,7 @@ shinken-data {
         { #J
           x = 700
           y = 29
+          outline-context = mune-kami
           right-fuller-height = 1.51
           right-fuller-iori-distance = 1.2
           right-fuller-width = 8.0
@@ -242,36 +259,43 @@ shinken-data {
         { #K
           x = 758
           y = 21
-          iori-width = 0
-          niku-surface-length = 16.2
-          kasane = 0
-          kissaki-mihaba = 0
+          outline-context = kissaki-saki
+          kissaki-iori-width = 0
+          kissaki-niku-surface-length = 0
+          kissaki-kasane = 0
         },
         { #L
           x = 0
           y = 74
+          outline-context = mune-nakago
           right-fuller-height = 1.81
+          right-fuller-backward-taper-height = 1.81
           left-fuller-height = 2.32
-          coordinate-reconstruction-context = translation-target
+          left-fuller-backward-taper-height = 2.32
+        },
+        { #L
+          x = 0
+          y = 74
+          outline-context = translation-target
         },
         { #L*
           x = 505
           y = 178
+          outline-context = translation-adjust
           geometric-transformation-context {
             reflected = true
             translated = true
             rotated = true
           }
-          coordinate-reconstruction-context = translation-adjust
         },
         { #M
           x = 540
           y = 177.5
-          nakago-shinogiji-iori-distance = 10.5
+          outline-context = mune-nakago
+          nakago-shinogiji-mune-distance = 10.5
           nakago-mune-side-height = 6.65
           nakago-shinogiji-height = 6.92
           nakago-ha-side-height = 3.07
-          nakago-width = 26.8
           geometric-transformation-context {
             reflected = true
             translated = true
@@ -281,11 +305,11 @@ shinken-data {
         { #N
           x = 620
           y = 176
-          nakago-shinogiji-iori-distance = 9.4
+          outline-context = mune-nakago
+          nakago-shinogiji-mune-distance = 9.4
           nakago-mune-side-height = 5.56
           nakago-shinogiji-height = 5.89
           nakago-ha-side-height = 2.72
-          nakago-width = 24
           geometric-transformation-context {
             reflected = true
             translated = true
@@ -295,11 +319,11 @@ shinken-data {
         { #O
           x = 700
           y = 173
-          nakago-shinogiji-iori-distance = 8.0
+          outline-context = mune-nakago
+          nakago-shinogiji-mune-distance = 8.0
           nakago-mune-side-height = 4.35
           nakago-shinogiji-height = 4.58
           nakago-ha-side-height = 1.41
-          nakago-width = 20
           geometric-transformation-context {
             reflected = true
             translated = true
@@ -308,32 +332,28 @@ shinken-data {
         },
         { #P
           x = 755.5
-          y = 170.2
-          nakago-shinogiji-iori-distance = 7.0
+          y = 170.5
+          outline-context = mune-nakago-jiri-boundary
+          nakago-shinogiji-mune-distance = 7.0
           nakago-mune-side-height = 3.46
           nakago-shinogiji-height = 3.88
           nakago-ha-side-height = 1.40
-          nakago-width = 19
           geometric-transformation-context {
             reflected = true
             translated = true
             rotated = true
           }
-          nakago-jiri-context {
-            ha-side-point = false
-            mune-side-point = true
-          }
         },
         { #Q
           x = 548
           y = 177
+          outline-context = mune-nakago
           right-fuller-backward-taper-height = 0
-          right-fuller-iori-distance = 6.0
+          right-fuller-backward-taper-iori-distance = 6.0
           right-fuller-backward-taper-width = 0
           left-fuller-backward-taper-height = 0
-          left-fuller-iori-distance = 6.0
+          left-fuller-backward-taper-iori-distance = 6.0
           left-fuller-backward-taper-width = 0
-          nakago-width = 27
           geometric-transformation-context {
             reflected = true
             translated = true
@@ -343,47 +363,54 @@ shinken-data {
         { #R
           x = 722
           y = 26
+          outline-context = mune-kissaki-boundary
           right-fuller-height = 1.28
           right-fuller-forward-taper-height = 1.28
           right-fuller-iori-distance = 0.9
+          right-fuller-forward-taper-iori-distance = 0.9
           right-fuller-width = 8.1
           right-fuller-forward-taper-width = 8.1
           left-fuller-height = 0.58
           left-fuller-forward-taper-height = 0.58
           left-fuller-iori-distance = 0.7
+          left-fuller-forward-taper-iori-distance = 0.7
           left-fuller-width = 7.9
           left-fuller-forward-taper-width = 7.9
+          kissaki-niku-surface-length = 16.1
+          niku-surface-length = 16.1
           iori-width = 0.8
           shinogiji-iori-distance = 9.8
           kissaki-shinogiji-iori-distance = 9.8
           kasane = 4.36
-          mihaba = 24.5
-          kissaki-mihaba = 24.5
           shinogiji-height = 4.48
         },
         { #S
           x = 732
           y = 24.5
+          outline-context = mune-kami
           right-fuller-forward-taper-height = 0
-          right-fuller-iori-distance = 0.9
+          right-fuller-forward-taper-iori-distance = 0.9
           right-fuller-forward-taper-width = 0
           left-fuller-forward-taper-height = 0
-          left-fuller-iori-distance = 0.7
+          left-fuller-forward-taper-iori-distance = 0.7
           left-fuller-forward-taper-width = 0
-          kissaki-mihaba = 20.5
         },
         { #T
           x = 744
           y = 22.5
+          outline-context = mune-shinogi-terminus
+          iori-width = 0.72
+          kissaki-iori-width = 0.72
           kasane = 3.73
+          kissaki-kasane = 3.73
           kissaki-shinogiji-iori-distance = 0
           shinogiji-height = 3.73
-          kissaki-mihaba = 15.5
         },
         { #U
           x = 558
           y = 191
-          mekugi-ana-diameter = 6.0
+          outline-context = mekugi-ana-centre
+          mekugi-ana-diameter = 6.3
           geometric-transformation-context {
             reflected = true
             translated = true
@@ -392,54 +419,144 @@ shinken-data {
         },
         {
           x = 758
-          y = 172.5
+          y = 173
+          outline-context = mune-nakago-jiri
           geometric-transformation-context {
             reflected = true
             translated = true
             rotated = true
-          }
-          nakago-jiri-context {
-            ha-side-point = false
-            mune-side-point = true
           }
         },
         {
-          x = 759
-          y = 177
+          x = 759.5
+          y = 177.5
+          outline-context = nakago-jiri
           geometric-transformation-context {
             reflected = true
             translated = true
             rotated = true
-          }
-          nakago-jiri-context {
-            ha-side-point = true
-            mune-side-point = true
           }
         },
         {
           x = 758
           y = 183
+          outline-context = ha-nakago-jiri
           geometric-transformation-context {
             reflected = true
             translated = true
             rotated = true
-          }
-          nakago-jiri-context {
-            ha-side-point = true
-            mune-side-point = false
           }
         },
         {
           x = 756
           y = 187.7
+          outline-context = ha-nakago-jiri-boundary
           geometric-transformation-context {
             reflected = true
             translated = true
             rotated = true
           }
-          nakago-jiri-context {
-            ha-side-point = true
-            mune-side-point = false
+        },
+        {
+          x = 12
+          y = 101
+          outline-context = ha-nakago
+        },
+        {
+          x = 12
+          y = 105
+          outline-context = ha-kami
+        },
+        {
+          x = 60
+          y = 104.5
+          outline-context = ha-kami
+        },
+        {
+          x = 140
+          y = 103
+          outline-context = ha-kami
+        },
+        {
+          x = 220
+          y = 100.5
+          outline-context = ha-kami
+        },
+        {
+          x = 300
+          y = 97
+          outline-context = ha-kami
+        },
+        {
+          x = 380
+          y = 91
+          outline-context = ha-kami
+        },
+        {
+          x = 460
+          y = 84
+          outline-context = ha-kami
+        },
+        {
+          x = 540
+          y = 75
+          outline-context = ha-kami
+        },
+        {
+          x = 620
+          y = 65.5
+          outline-context = ha-kami
+        },
+        {
+          x = 680
+          y = 57.75
+          outline-context = ha-kami
+        },
+        {
+          x = 727.5
+          y = 49.5
+          outline-context = ha-yokote
+        },
+        {
+          x = 738
+          y = 43.5
+          outline-context = ha-kissaki
+        },
+        {
+          x = 749.5
+          y = 33.5
+          outline-context = ha-kissaki
+        },
+
+        {
+          x = 700
+          y = 193.5
+          outline-context = ha-nakago
+          geometric-transformation-context {
+            reflected = true
+            translated = true
+            rotated = true
+          }
+        },
+
+        {
+          x = 620
+          y = 200
+          outline-context = ha-nakago
+          geometric-transformation-context {
+            reflected = true
+            translated = true
+            rotated = true
+          }
+        },
+        {
+          x = 540
+          y = 204.2
+          outline-context = ha-nakago
+          geometric-transformation-context {
+            reflected = true
+            translated = true
+            rotated = true
           }
         }
       ]
